--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ button:hover {
     border: 1px solid #ddd;
     border-radius: 4px;
     background-color: #f9f9f9;
+    min-width:10px;
 }
 
 .weekday {
